tests/fixtures/errors/invalid-syntax/src/index.js
// Invalid JavaScript syntax to trigger build error (not missing dependency error)
const x = {{{
export default x
